--- a/en/index.html
+++ b/en/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontline - Robots That Will Change the Course of the War </title>
-    <meta name="description" content="Frontline — is a ukrainian MilTech company, that specializes on development and production of robotized systems for the frontlines.">
+    <title>YEREMENKO Trade - Robots That Will Change the Course of the War </title>
+    <meta name="description" content="YEREMENKO Trade — is a ukrainian MilTech company, that specializes on development and production of robotized systems for the frontlines.">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/splide_config.css">
     <script src="/script.js"></script>
@@ -19,16 +19,16 @@
     <meta name="msapplication-config" content="/static/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Frontline - Robots That Will Change the Course of the War ">
-    <meta property="og:description" content="Frontline — is a ukrainian MilTech company, that specializes on development and production of robotized systems for the frontlines.">
+    <meta property="og:title" content="YEREMENKO Trade - Robots That Will Change the Course of the War ">
+    <meta property="og:description" content="YEREMENKO Trade — is a ukrainian MilTech company, that specializes on development and production of robotized systems for the frontlines.">
     <meta property="og:site_name" content="Frontline">
     <meta property="og:image" content="/static/images/social.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1200px">
     <meta property="og:image:height" content="630px">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Frontline - Robots That Will Change the Course of the War ">
-    <meta name="twitter:description" content="Frontline — is a ukrainian MilTech company, that specializes on development and production of robotized systems for the frontlines.">
+    <meta name="twitter:title" content="YEREMENKO Trade - Robots That Will Change the Course of the War ">
+    <meta name="twitter:description" content="YEREMENKO Trade — is a ukrainian MilTech company, that specializes on development and production of robotized systems for the frontlines.">
     <meta name="twitter:image" content="/static/images/social.png">
     <meta name="twitter:dnt" content="on">
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js"></script>
@@ -51,73 +51,14 @@
     <section class="header-wrapper">
         <div class="header">
             <a href="/en/index.html" class="header-logo">
-                <svg viewBox="0 0 199 34" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <g id="Logo Frontline">
-                        <g id="Group 1171275387">
-                            <path id="Subtract" fill-rule="evenodd" clip-rule="evenodd"
-                                d="M6.19947 -0.00390625H13.8906V6.26214H6.19947V13.8721H0V6.26214L6.19947 -0.00390625ZM0 20.1268H6.19947V27.738H13.8906V34.0039H6.19947L0 27.738V20.1268ZM20.1454 34.0039H27.8083L34.0078 27.738V20.1268H27.8083V27.738H20.1454V34.0039ZM27.8083 13.8721V6.26214H20.1454V-0.00390625H27.8083L34.0078 6.26214V13.8721H27.8083Z"
-                                fill="currentColor" />
-                            <circle id="Ellipse 1343" cx="17.0047" cy="16.9998" r="5.02033" fill="currentColor" />
-                        </g>
-                        <g id="Group 1171275440">
-                            <g id="Group 1171275433">
-                                <g id="Group 1171275383">
-                                    <g id="Group 1171275382">
-                                        <g id="FRONTLINE">
-                                            <path id="Vector"
-                                                d="M180.85 28.3678V28.4301L180.894 28.4742L184.298 31.879L184.343 31.9231H184.405H197.329H197.48V31.7726V28.2983V28.1479H197.329H185.181V23.3067H195.079H198.024H198.175V23.1563V15.6518V15.5929L198.135 15.5496L195.051 12.2143L195.006 12.166H194.941H184.405H184.343L184.298 12.21L180.894 15.6149L180.85 15.6589V15.7212V28.3678ZM194.226 15.8022V19.8704H185.181V15.8022H194.226Z"
-                                                fill="currentColor" stroke="currentColor" stroke-width="0.300856" />
-                                            <path id="Vector_2"
-                                                d="M159.373 31.7726V31.9231H159.523H163.554H163.704V31.7726V16.0106H172.992V31.7726V31.9231H173.143H177.173H177.323V31.7726V15.7907V15.7284L177.279 15.6844L173.805 12.21L173.761 12.166H173.699H159.523H159.373V12.3164V31.7726Z"
-                                                fill="currentColor" stroke="currentColor" stroke-width="0.300856" />
-                                            <path id="Vector_3"
-                                                d="M150.654 31.7706V31.921H150.805H154.835H154.985V31.7706V12.3144V12.164H154.835H150.805H150.654V12.3144V31.7706ZM150.654 8.87103V9.02146H150.805H154.835H154.985V8.87103V5.74414V5.59371H154.835H150.805H150.654V5.74414V8.87103Z"
-                                                fill="currentColor" stroke="currentColor" stroke-width="0.300856" />
-                                            <path id="Vector_4"
-                                                d="M141.936 31.7724V31.9229H142.086H146.116H146.267V31.7724V4.82227V4.67184H146.116H142.086H141.936V4.82227V31.7724Z"
-                                                fill="currentColor" stroke="currentColor" stroke-width="0.300856" />
-                                            <path id="Vector_5"
-                                                d="M125.117 4.66598H124.967V4.81641V28.2972V28.3595L125.011 28.4036L128.485 31.8779L128.529 31.922H128.592H137.416H137.567V31.7715V28.2972V28.1468H137.416H129.298V16.6349H137.416H137.567V16.4845V13.0102V12.8597H137.416H129.298V4.81641V4.66598H129.147H125.117Z"
-                                                fill="currentColor" stroke="currentColor" stroke-width="0.300856" />
-                                            <path id="Vector_6"
-                                                d="M103.49 31.7726V31.9231H103.641H107.671H107.821V31.7726V16.0106H117.11V31.7726V31.9231H117.26H121.29H121.441V31.7726V15.7907V15.7284L121.397 15.6844L117.922 12.21L117.878 12.166H117.816H103.641H103.49V12.3164V31.7726Z"
-                                                fill="currentColor" stroke="currentColor" stroke-width="0.300856" />
-                                            <path id="Vector_7"
-                                                d="M65.3886 31.7726V31.9231H65.5391H69.5693H69.7197V31.7726V16.0801H79.2279H79.3783V15.9297V12.3164V12.166H79.2279H69.0134H68.9511L68.907 12.21L65.4327 15.6844L65.3886 15.7284V15.7907V31.7726Z"
-                                                fill="currentColor" stroke="currentColor" stroke-width="0.300856" />
-                                            <path id="Vector_8"
-                                                d="M45.9902 31.7721V31.9225H46.1406H50.1708H50.3213V31.7721V17.8274H61.5293H61.6798V17.677V14.2026V14.0522H61.5293H50.3213V7.63955H64.1592H64.3096V7.48913V3.94531V3.79488H64.1592H49.5455H49.4832L49.4391 3.83894L46.0343 7.24378L45.9902 7.28784V7.35015V31.7721Z"
-                                                fill="currentColor" stroke="currentColor" stroke-width="0.300856" />
-                                            <g id="Subtract_2">
-                                                <mask id="path-11-outside-1_1_39" maskUnits="userSpaceOnUse" x="80.7188"
-                                                    y="11.3164" width="20" height="21" fill="black">
-                                                    <rect fill="white" x="80.7188" y="11.3164" width="20" height="21" />
-                                                    <path
-                                                        d="M81.7188 28.3678V15.7212L85.1236 12.3164L96.4671 12.3164L99.8719 15.7212V28.3678L96.4671 31.7726H85.1236L81.7188 28.3678ZM85.749 28.3678H95.8417V15.7212H85.749V28.3678Z" />
-                                                </mask>
-                                                <path
-                                                    d="M81.7188 28.3678V15.7212L85.1236 12.3164L96.4671 12.3164L99.8719 15.7212V28.3678L96.4671 31.7726H85.1236L81.7188 28.3678ZM85.749 28.3678H95.8417V15.7212H85.749V28.3678Z"
-                                                    fill="currentColor" />
-                                                <path
-                                                    d="M81.7188 28.3678H81.4179V28.4924L81.506 28.5805L81.7188 28.3678ZM81.7188 15.7212L81.506 15.5085L81.4179 15.5966V15.7212H81.7188ZM85.1236 12.3164L85.1236 12.0156L84.999 12.0156L84.9109 12.1037L85.1236 12.3164ZM96.4671 12.3164L96.6798 12.1037L96.5917 12.0156L96.4671 12.0156L96.4671 12.3164ZM99.8719 15.7212H100.173V15.5966L100.085 15.5085L99.8719 15.7212ZM99.8719 28.3678L100.085 28.5805L100.173 28.4924V28.3678H99.8719ZM96.4671 31.7726V32.0735H96.5917L96.6798 31.9854L96.4671 31.7726ZM85.1236 31.7726L84.9109 31.9854L84.999 32.0735H85.1236V31.7726ZM85.749 28.3678H85.4481V28.6687H85.749V28.3678ZM95.8417 28.3678V28.6687H96.1426V28.3678H95.8417ZM95.8417 15.7212H96.1426V15.4204H95.8417V15.7212ZM85.749 15.7212V15.4204H85.4481V15.7212H85.749ZM82.0196 28.3678V15.7212H81.4179V28.3678H82.0196ZM81.9315 15.934L85.3363 12.5291L84.9109 12.1037L81.506 15.5085L81.9315 15.934ZM85.1236 12.6173L96.4671 12.6173L96.4671 12.0156L85.1236 12.0156L85.1236 12.6173ZM96.2544 12.5291L99.6592 15.934L100.085 15.5085L96.6798 12.1037L96.2544 12.5291ZM99.5711 15.7212V28.3678H100.173V15.7212H99.5711ZM99.6592 28.1551L96.2544 31.5599L96.6798 31.9854L100.085 28.5805L99.6592 28.1551ZM96.4671 31.4718H85.1236V32.0735H96.4671V31.4718ZM85.3363 31.5599L81.9315 28.1551L81.506 28.5805L84.9109 31.9854L85.3363 31.5599ZM85.749 28.6687H95.8417V28.0669H85.749V28.6687ZM96.1426 28.3678V15.7212H95.5409V28.3678H96.1426ZM95.8417 15.4204H85.749V16.0221H95.8417V15.4204ZM85.4481 15.7212V28.3678H86.0498V15.7212H85.4481Z"
-                                                    fill="currentColor" mask="url(#path-11-outside-1_1_39)" />
-                                            </g>
-                                        </g>
-                                    </g>
-                                </g>
-                            </g>
-                        </g>
-                    </g>
-                </svg>
+                <img src="/static/icons/YEREMENKO TRADE.svg" alt="main_logo">
             </a>
             <div class="menu">
                 <a href="#mission" class="nav-link">Our mission</a>
                 <a href="#products" class="nav-link">Products</a>
                 <a href="#cooperation" class="nav-link">Cooperation</a>
                 <a href="#faq" class="nav-link">Questions</a>
-<!--                 <a href="/fortifications.html" class="nav-link">Fortifications</a> -->
                 <a href="#vacancies" class="nav-link">Vacancies</a>
-                <a href="/fortifications.html" class="nav-link">ОКоп</a>
             </div>
             <div class="menu-add-wrapper">
                 <a href="/" class="lang-switch">UA</a>
@@ -163,24 +104,8 @@
                                 stroke="currentColor" stroke-width="6" />
                         </svg>
                     </a>
-<!--                     <a href="/fortifications.html" class="nav-link">
-                        <p>Fortifications</p>
-                        <svg viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M8.06171 4.09643L40.2725 3.27051L48.5284 11.5264L47.7058 43.7405M43.4611 8.31829L2.67969 49.103"
-                                stroke="currentColor" stroke-width="6" />
-                        </svg>
-                    </a> -->
                     <a href="#vacancies" class="nav-link">
                         <p>Vacancies</p>
-                        <svg viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M8.06171 4.09643L40.2725 3.27051L48.5284 11.5264L47.7058 43.7405M43.4611 8.31829L2.67969 49.103"
-                                stroke="currentColor" stroke-width="6" />
-                        </svg>
-                    </a>
-                    <a href="/fortifications.html" class="nav-link">
-                        <p>ОКоп</p>
                         <svg viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M8.06171 4.09643L40.2725 3.27051L48.5284 11.5264L47.7058 43.7405M43.4611 8.31829L2.67969 49.103"
@@ -806,8 +731,8 @@
             <div class="form-text">
                 <p class="text-topline">CALL US FOR THE<br />COOPERATION DETAILS</p>
                 <div class="contacts">
-                    <a href="mailto:info@frontline.com.ua">info@frontline.com.ua</a>
-                    <a href="tel:+380933898295">+38(068) 440-87-07</a>
+                    <a href="mailto:info@frontline.com.ua">eremenko.anton@gmail.com</a>
+                    <a href="tel:+380933898295">+380 50 966 83 66</a>
                 </div>
             </div>
             <div class="form-body">
@@ -827,31 +752,22 @@
     <section class="footer-wrapper">
         <div class="footer">
             <div class="first-row">
-                <img src="../static/images/logo_white.svg" alt="White Frontline logo" class="logo-footer">
+                <img src="/static/icons/YEREMENKO TRADE.svg" alt="main_logo" class="logo-footer">
                 <div class="footer-links">
                     <div class="links">
                         <p class="title">Contact us</p>
-                        <a href="https://wa.me/380684408707" target="_blank" class="link">WhatsApp</a>
-                        <a href="https://signal.me/#p/+380684408707" class="link">Signal</a>
-                        <a href="https://x.com/frontline_ua" class="link">Twitter</a>
+                        <a href="https://wa.me/380509668366" target="_blank" class="link">WhatsApp</a>
+                        <a href="https://signal.me/#p/+380509668366" class="link">Signal</a>
                     </div>
                     <div class="links">
                         <p class="title">Contacts</p>
-                        <a href="mailto:hello@frontline.com.ua" class="link">hello@frontline.com.ua</a>
-                        <a href="tel:+380684408707" class="link"> +38(068) 440-87-07</a>
+                        <a href="mailto:eremenko.anton@gmail.com" class="link">eremenko.anton@gmail.com</a>
+                        <a href="tel:+380509668366" class="link"> +380 50 966 83 66</a>
                     </div>
                 </div>
             </div>
             <div class="second-row">
                 <p class="rights">© all rights reserved. 2024</p>
-                <div class="socials">
-                    <a href="https://www.linkedin.com/company/frontline-robots" target="_blank" rel="noopener noreferrer">
-                        <img src="/static/icons/Social icon.svg" alt="Social icon" class="social">
-                    </a>
-                    <a href="https://x.com/frontline_ua" target="_blank" rel="noopener noreferrer">
-                        <img src="/static/icons/X_logo_2023.svg" alt="Social Twitter" class="social">
-                    </a>
-                </div>
             </div>
         </div>
     </section>
