Added payment details

--- a/en/index.html
+++ b/en/index.html
@@ -58,7 +58,6 @@
                 <a href="#products" class="nav-link">Products</a>
                 <a href="#cooperation" class="nav-link">Cooperation</a>
                 <a href="#faq" class="nav-link">Questions</a>
-                <a href="#vacancies" class="nav-link">Vacancies</a>
             </div>
             <div class="menu-add-wrapper">
                 <a href="/" class="lang-switch">UA</a>
@@ -98,14 +97,6 @@
                     </a>
                     <a href="#faq" class="nav-link">
                         <p>Questions</p>
-                        <svg viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M8.06171 4.09643L40.2725 3.27051L48.5284 11.5264L47.7058 43.7405M43.4611 8.31829L2.67969 49.103"
-                                stroke="currentColor" stroke-width="6" />
-                        </svg>
-                    </a>
-                    <a href="#vacancies" class="nav-link">
-                        <p>Vacancies</p>
                         <svg viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M8.06171 4.09643L40.2725 3.27051L48.5284 11.5264L47.7058 43.7405M43.4611 8.31829L2.67969 49.103"
@@ -176,7 +167,7 @@
                     <img src="../static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
                     <h3>Mission</h3>
                 </div>
-                <p class="mission-description">Frontline is a Ukrainian MilTech company that develops and produces robotic systems for the front line.</p>
+                <p class="mission-description">YEREMENKO Trade is a Ukrainian MilTech company that develops and produces robotic systems for the front line.</p>
                 <p class="mission-description">Our mission is to implement new rules of warfare where robots replace humans.</p>
                 <p class="mission-description --bold">We believe that only the massive deployment of robots can alter the course of war.</p>
             </div>
@@ -201,16 +192,36 @@
             </div> -->
         </div>
     </section>
-    <!-- <section class="promo-video-wrapper">
-        <div class="title-wrapper --big-margin">
-            <img src="../static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-            <h3>промо відео</h3>
+    <section id="payments" class="mission-wrapper">
+        <div class="first-row">
+            <div class="title-wrapper">
+                <img src="/static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
+                <h3>Payment details</h3>
+            </div>
         </div>
-        <div id="promoVideo" class="promo-video">
-            <img src="../static/images/promo_video.png" alt="Promo video slot">
-            <img id="promoVideoTrigger" class="play-button" src="../static/icons/play.svg" alt="Play button">
+        <div class="second-row">
+            <div class="numbers-wrapper">
+                <p class="number-text">Єременко А.В. ФОП <strong class="copy" copy="Єременко А.В. ФОП" onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Найменування організації</p>
+            </div>
+            <div class="numbers-wrapper">
+                <p class="number-text">3148612096 <strong class="copy" copy="3148612096" onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Код отримувача</p>
+            </div>
+            <div class="numbers-wrapper">
+                <p class="number-text">АТ КБ "ПРИВАТБАНК"<strong class="copy" copy='АТ КБ "ПРИВАТБАНК"' onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Назва банку</p>
+            </div>
+            <div class="numbers-wrapper">
+                <p class="number-text">UA503052990000026009026220620<strong class="copy" copy='UA503052990000026009026220620' onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Рахунок отримувача у форматі IBAN</p>
+            </div>
+            <div class="numbers-wrapper">
+                <p class="number-text">UAH<strong class="copy" copy='UAH' onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Валюта</p>
+            </div>
         </div>
-    </section> -->
+    </section>
     <section id="products" class="product-wrapper --border">
         <div class="title-wrapper --no-arrow">
             <img src="../static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
@@ -660,72 +671,6 @@
             </div>
         </div>
     </section>
-    <section id="vacancies" class="vacancies-wrapper">
-        <div class="vacancies">
-            <div class="title-wrapper --big-margin">
-                <img src="/static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                <h3>Join the team</h3>
-            </div>
-            <div class="vacancies-list">
-                <a href="https://jobs.dou.ua/companies/frontline/vacancies/278922/" target="_blank" class="vacancy">
-                    <div class="vacancy-info">
-                        <p class="vacancy-title">
-                            Robotics Team Lead
-                        </p>
-                        <p class="vacancy-description">
-                            Шукаємо досвідченого розробника на роль техліда напрямку Computer Vision. Ви тісно працюватимете з інженерами-робототехніками, конструкторами та програмістами як системного рівня, так і алгоритмістами. Артефакти роботи вашої команди працюватимуть безпосередньо на роботизованих системах, маючи суттєвий вплив на хід бойових дій тактичного рівня.
-                        </p>
-                    </div>
-                    <img src="/static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                </a>
-                <a href="https://jobs.dou.ua/companies/frontline/vacancies/277126/" target="_blank" class="vacancy">
-                    <div class="vacancy-info">
-                        <p class="vacancy-title">
-                            Єдиний бухгалтер (виробництво)
-                        </p>
-                        <p class="vacancy-description">
-                            Шукаємо єдиного бухгалтера, який/яка розділить наші цінності і буде піклуватися про ведення наших фінансів. Ви будете працювати з виробництвом, ресурсними специфікації готової продукції, нематеріальними активами підприємства, гіг-контрактами та ФОПами.
-                        </p>
-                    </div>
-                    <img src="/static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                </a>
-                <a href="https://robota.ua/company0/vacancy10072291" target="_blank" class="vacancy">
-                    <div class="vacancy-info">
-                        <p class="vacancy-title">
-                            Монтажник БпЛА
-                        </p>
-                        <p class="vacancy-description">
-                            Шукаємо інженера зі складання дронів. Це непересічна робота, адже завжди є щось нове: нові відеокамери, нові датчики, нові завдання по їхньому встановленню та під'єднанню:) Постійна необхідність у вдосконаленні конструкцій може призвести до викликів, але це те, що робить нашу роботу насправді захоплюючою.
-                        </p>
-                    </div>
-                    <img src="/static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                </a>
-                <a href="https://frontline-robotics.notion.site/debbede6d05b4f6aa3025eef9bbf34c6" target="_blank" class="vacancy">
-                    <div class="vacancy-info">
-                        <p class="vacancy-title">
-                            Спеціаліст з розробки радарної системи (волонтер/проєктна залученість)
-                        </p>
-                        <p class="vacancy-description">
-                            Шукаємо спеціаліста з досвідом розробки та налаштування радарних систем. Задача: розробити максимально дешевий радар, здатний виявляти дронів на відстані до 1 км, використовуючи доступні на ринку компоненти. 
-                        </p>
-                    </div>
-                    <img src="/static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                </a>
-            </div>
-            <div class="vacancies-cta-box">
-                <img src="/static/images/wave_background.png" alt="" class="wave">
-                <img src="/static/icons/square.svg" alt="square" class="square">
-                <div class="cta-text">
-                    <p class="cta-question">
-                        Want to join the team?
-                    </p>
-                    <p class="cta-action">
-                        Send your CV to <span>careers@frontline.com.ua</span>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
     <section id="form" class="form-wrapper">
         <div class="form">
             <div class="form-text">
@@ -797,6 +742,12 @@
         }
         new Splide('#video-slider').mount();
         new Splide('#team-slider').mount();
+
+        function copyToClipboard(el) {
+            navigator.clipboard.writeText(el.getAttribute("copy"));
+            el.classList.add('--active')
+            setTimeout(() => {el.classList.remove('--active')}, 500)
+        }
     </script>
 </body>
 
