--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="YEREMENKO Trade - роботи, що змінять хід війни">
     <meta property="og:description" content="YEREMENKO Trade — це українська MilTech компанія, яка спеціалізується на розробці та виготовленні роботизованих систем для передової.">
     <meta property="og:site_name" content="YEREMENKO Trade">
-    <meta property="og:image" content="./static/images/social.jpg">
+    <meta property="og:image" content="/static/images/social.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1200px">
     <meta property="og:image:height" content="630px">
@@ -58,7 +58,6 @@
                 <a href="#products" class="nav-link">Продукція</a>
                 <a href="#cooperation" class="nav-link">Співпраця</a>
                 <a href="#faq" class="nav-link">Питання</a>
-                <a href="#vacancies" class="nav-link">Вакансії</a>
             </div>
             <div class="menu-add-wrapper">
                 <a href="/en/index.html" class="lang-switch">ENG</a>
@@ -98,14 +97,6 @@
                     </a>
                     <a href="#faq" class="nav-link">
                         <p>Питання</p>
-                        <svg viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M8.06171 4.09643L40.2725 3.27051L48.5284 11.5264L47.7058 43.7405M43.4611 8.31829L2.67969 49.103"
-                                stroke="currentColor" stroke-width="6" />
-                        </svg>
-                    </a>
-                    <a href="#vacancies" class="nav-link">
-                        <p>Вакансії</p>
                         <svg viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M8.06171 4.09643L40.2725 3.27051L48.5284 11.5264L47.7058 43.7405M43.4611 8.31829L2.67969 49.103"
@@ -176,7 +167,7 @@
                     <img src="./static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
                     <h3>Місія</h3>
                 </div>
-                <p class="mission-description">Frontline — це українська MilTech компанія яка спеціалізується на розробці та виготовленні роботизованих систем для передової.</p>
+                <p class="mission-description">YEREMENKO Trade — це українська MilTech компанія яка спеціалізується на розробці та виготовленні роботизованих систем для передової.</p>
                 <p class="mission-description">Наша місія полягає у впровадженні нових правил ведення бойових дій, в яких роботи замінять людей.</p>
                 <p class="mission-description --bold">Ми віримо, що змінити хід війни може лише масове застосування роботів.</p>
             </div>
@@ -194,6 +185,36 @@
             <div class="numbers-wrapper">
                 <p class="number-text"><span>7</span> роботів </p>
                 <p class="number-description">допущених до використання в ЗСУ від учасників команди</p>
+            </div>
+        </div>
+    </section>
+    <section id="payments" class="mission-wrapper">
+        <div class="first-row">
+            <div class="title-wrapper">
+                <img src="./static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
+                <h3>Реквізити</h3>
+            </div>
+        </div>
+        <div class="second-row">
+            <div class="numbers-wrapper">
+                <p class="number-text">Єременко А.В. ФОП <strong class="copy" copy="Єременко А.В. ФОП" onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Найменування організації</p>
+            </div>
+            <div class="numbers-wrapper">
+                <p class="number-text">3148612096 <strong class="copy" copy="3148612096" onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Код отримувача</p>
+            </div>
+            <div class="numbers-wrapper">
+                <p class="number-text">АТ КБ "ПРИВАТБАНК"<strong class="copy" copy='АТ КБ "ПРИВАТБАНК"' onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Назва банку</p>
+            </div>
+            <div class="numbers-wrapper">
+                <p class="number-text">UA503052990000026009026220620<strong class="copy" copy='UA503052990000026009026220620' onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Рахунок отримувача у форматі IBAN</p>
+            </div>
+            <div class="numbers-wrapper">
+                <p class="number-text">UAH<strong class="copy" copy='UAH' onclick="copyToClipboard(this)"><img src="/static/icons/copy.svg" alt=""></strong></p>
+                <p class="number-description">Валюта</p>
             </div>
         </div>
     </section>
@@ -525,72 +546,6 @@
             </div>
         </div>
     </section>
-    <section id="vacancies" class="vacancies-wrapper">
-        <div class="vacancies">
-            <div class="title-wrapper --big-margin">
-                <img src="./static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                <h3>Долучайся до команди</h3>
-            </div>
-            <div class="vacancies-list">
-                <a href="https://jobs.dou.ua/companies/frontline/vacancies/278922/" target="_blank" class="vacancy">
-                    <div class="vacancy-info">
-                        <p class="vacancy-title">
-                            Robotics Team Lead
-                        </p>
-                        <p class="vacancy-description">
-                            Шукаємо досвідченого розробника на роль техліда напрямку Computer Vision. Ви тісно працюватимете з інженерами-робототехніками, конструкторами та програмістами як системного рівня, так і алгоритмістами. Артефакти роботи вашої команди працюватимуть безпосередньо на роботизованих системах, маючи суттєвий вплив на хід бойових дій тактичного рівня.
-                        </p>
-                    </div>
-                    <img src="./static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                </a>
-                <a href="https://jobs.dou.ua/companies/frontline/vacancies/277126/" target="_blank" class="vacancy">
-                    <div class="vacancy-info">
-                        <p class="vacancy-title">
-                            Єдиний бухгалтер (виробництво)
-                        </p>
-                        <p class="vacancy-description">
-                            Шукаємо єдиного бухгалтера, який/яка розділить наші цінності і буде піклуватися про ведення наших фінансів. Ви будете працювати з виробництвом, ресурсними специфікації готової продукції, нематеріальними активами підприємства, гіг-контрактами та ФОПами.
-                        </p>
-                    </div>
-                    <img src="./static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                </a>
-                <a href="https://robota.ua/company0/vacancy10072291" target="_blank" class="vacancy">
-                    <div class="vacancy-info">
-                        <p class="vacancy-title">
-                            Монтажник БпЛА
-                        </p>
-                        <p class="vacancy-description">
-                            Шукаємо інженера зі складання дронів. Це непересічна робота, адже завжди є щось нове: нові відеокамери, нові датчики, нові завдання по їхньому встановленню та під'єднанню:) Постійна необхідність у вдосконаленні конструкцій може призвести до викликів, але це те, що робить нашу роботу насправді захоплюючою.
-                        </p>
-                    </div>
-                    <img src="./static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                </a>
-                <a href="https://frontline-robotics.notion.site/debbede6d05b4f6aa3025eef9bbf34c6" target="_blank" class="vacancy">
-                    <div class="vacancy-info">
-                        <p class="vacancy-title">
-                            Спеціаліст з розробки радарної системи (волонтер/проєктна залученість)
-                        </p>
-                        <p class="vacancy-description">
-                            Шукаємо спеціаліста з досвідом розробки та налаштування радарних систем. Задача: розробити максимально дешевий радар, здатний виявляти дронів на відстані до 1 км, використовуючи доступні на ринку компоненти. 
-                        </p>
-                    </div>
-                    <img src="./static/icons/arrow_up.svg" alt="Black arrow" class="arrow-con">
-                </a>
-            </div>
-            <div class="vacancies-cta-box">
-                <img src="./static/images/wave_background.png" alt="" class="wave">
-                <img src="./static/icons/square.svg" alt="square" class="square">
-                <div class="cta-text">
-                    <p class="cta-question">
-                        Хочеш стати частиною команди?
-                    </p>
-                    <p class="cta-action">
-                        Надсилай своє CV на <span>eremenko.anton@gmail.com</span>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
     <section id="form" class="form-wrapper">
         <div class="form">
             <div class="form-text">
@@ -662,6 +617,12 @@
         }
         new Splide('#video-slider').mount();
         new Splide('#team-slider').mount();
+
+        function copyToClipboard(el) {
+            navigator.clipboard.writeText(el.getAttribute("copy"));
+            el.classList.add('--active')
+            setTimeout(() => {el.classList.remove('--active')}, 500)
+        }
     </script>
 </body>
 
